--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,18 +16,77 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.card {
+  transform: rotateY(180deg);
+  animation: 2s hideCard linear;
+  transition: transform 0.5s;
+  background: white;
+}
+
+@keyframes hideCard {
+  0%, 70% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+.img {
+  transform: scale(0);
+  animation: 2s hideImage linear;
+  transition: transform 0.5s;
+
+
+}
+
+@keyframes hideImage {
+  0%, 70% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);;
+  }
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+.card_active{
+  background: white;
+
+  transform: rotateY(0);
+
+}
+
+.card_active .img {
+  transform: scale(1);
+
+}
+
+
+.card_wrong {
+  background: lightcoral;
+  transform: rotateY(0);
+
+}
+
+.card_wrong .img {
+  transform: scale(1);
+
+}
+
+.card_correct {
+  background: limegreen;
+  transform: rotateY(0);
+
+}
+
+.card_correct .img {
+  transform: scale(1);
+
 }
